termine creo xD

--- a/ActividadClase5/views/ac1.html
+++ b/ActividadClase5/views/ac1.html
@@ -23,8 +23,12 @@
         <label for="yDos">Valor de Y2</label>
         <input type="number" id="yDos">
     </div>
-    <button type="button">Calcular distancia</button>
+    <div>
+    <button type="button" id="btn" >Distancia</button>
+</div>
+<div id="print">
 
+</div>
     <script src="../js/main.js" type="module"></script>
 </body>
 
