Solo falta mostrarlo en tabla

--- a/Tarea6/views/index.html
+++ b/Tarea6/views/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <button id="btnAvanzar">Avanzar</button>
-    
+    <p id="texto"></p>
 
 
     <script src="../js/main.js" type="module"></script>
