--- a/Tarea7/views/index.html
+++ b/Tarea7/views/index.html
@@ -24,13 +24,16 @@
 
             <!-- Boton que activa el modal para el formulario de contactos -->
             <div class="justify-content-end">
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalArticulo">Agregar</button>
+                <button type="button" class="btn btn-primary" data-toggle="modal"
+                    data-target="#modalArticulo">Agregar</button>
             </div>
             <div class="justify-content-end">
-                <button type="button" class="btn btn-danger ml-2" data-toggle="modal" data-target="#modalEliminar">Eliminar</button>
+                <button type="button" class="btn btn-danger ml-2" data-toggle="modal"
+                    data-target="#modalEliminar">Eliminar</button>
             </div>
             <div class="justify-content-end">
-                <button type="button" class="btn btn-warning ml-2" data-toggle="modal" data-target="#modalEditar">Editar</button>
+                <button type="button" class="btn btn-warning ml-2" data-toggle="modal"
+                    data-target="#modalEditar">Editar</button>
             </div>
 
         </div>
@@ -39,11 +42,11 @@
             <table class="table col-9">
                 <thead>
                     <tr>
-                      <th scope="col">Codigo</th>
-                      <th scope="col">Nombre</th>
-                      <th scope="col">Precio</th>
-                      <th scope="col">Contenido</th>
-                      <th scope="col">Descripción</th>
+                        <th scope="col">Codigo</th>
+                        <th scope="col">Nombre</th>
+                        <th scope="col">Precio</th>
+                        <th scope="col">Contenido</th>
+                        <th scope="col">Descripción</th>
                     </tr>
                 </thead>
                 <tbody id="tablaArticulos">
@@ -55,123 +58,142 @@
                 </tbody>
             </table>
         </div>
+
+
         <!-- Modal para agregar articulo -->
-        <div class="modal fade" id="modalArticulo" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal fade" id="modalArticulo" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
             <div class="modal-dialog" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">Datos del articulo</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                </div>
-                <div class="modal-body" >
-                    <!-- Inicia formulario articulo -->
-                    <form class="needs-validation" novalidate id="formArticulo">
-                      <div class="form-group">
-                          <label for="codigoArticulo">Codigo:</label>
-                          <input type="number" id="codigoArticulo" placeholder="7504516130567" class="form-control" required>
-                      </div>
-                      <div class="form-group">
-                          <label for="nombreArticulo">Nombre:</label>
-                          <input type="text" id="nombreArticulo" placeholder="Lechita de la buena" class="form-control" required>
-                      </div>
-                      <div class="form-group">
-                        <label for="precioArticulo">Precio:</label>
-                        <input type="number" id="precioArticulo" placeholder="$850.00" class="form-control" required>
-                      </div>
-                      <div class="form-group">
-                          <label for="contenidoArticulo">Contenido:</label>
-                          <input type="number" id="contenidoArticulo" placeholder="800ml" class="form-control" required>
-                      </div>
-                      <div class="form-group">
-                        <label for="descripcionArticulo">Descripcion:</label>
-                        <input type="text" id="descripcionArticulo" placeholder="Leche entera lala pasteurisada" class="form-control" required>
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Datos del articulo</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
                     </div>
-                    </form>
+                    <div class="modal-body">
+                        <!-- Inicia formulario articulo -->
+                        <form class="needs-validation" novalidate id="formArticulo">
+                            <div class="form-group">
+                                <label for="codigoArticulo">Codigo:</label>
+                                <input type="number" id="codigoArticulo" placeholder="7504516130567"
+                                    class="form-control" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="nombreArticulo">Nombre:</label>
+                                <input type="text" id="nombreArticulo" placeholder="Lechita de la buena"
+                                    class="form-control" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="precioArticulo">Precio:</label>
+                                <input type="number" id="precioArticulo" placeholder="$850.00" class="form-control"
+                                    required>
+                            </div>
+                            <div class="form-group">
+                                <label for="contenidoArticulo">Contenido:</label>
+                                <input type="number" id="contenidoArticulo" placeholder="800ml" class="form-control"
+                                    required>
+                            </div>
+                            <div class="form-group">
+                                <label for="descripcionArticulo">Descripcion:</label>
+                                <input type="text" id="descripcionArticulo" placeholder="Leche entera lala pasteurisada"
+                                    class="form-control" required>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal"
+                            id="cerrarModal">Cerrar</button>
+                        <button type="button" class="btn btn-primary" id="agregarArticulo">Agregar articulo</button>
+                    </div>
                 </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal" id="cerrarModal">Cerrar</button>
-                  <button type="button" class="btn btn-primary" id="agregarArticulo">Agregar articulo</button>
-                </div>
-              </div>
             </div>
         </div>
 
 
         <!-- Modal para eliminar articulo -->
-        <div class="modal fade" id="modalEliminar" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal fade" id="modalEliminar" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
             <div class="modal-dialog" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">Borrar articulo</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Borrar articulo</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <!-- Inicia formulario borrar articulo -->
+                        <form class="needs-validation" novalidate id="formEliminar">
+                            <div class="form-group">
+                                <label for="nombreEliminar">Codigo del articulo</label>
+                                <input type="number" id="articuloAEliminar" placeholder="7504516130567"
+                                    class="form-control" required>
+                            </div>
+
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal"
+                            id="cerrarEliminar">Cerrar</button>
+                        <button type="button" class="btn btn-danger" id="eliminarArticulo">Eliminar articulo</button>
+                    </div>
                 </div>
-                <div class="modal-body" >
-                    <!-- Inicia formulario borrar articulo -->
-                    <form class="needs-validation" novalidate id="formTorneo">
-                      <div class="form-group">
-                          <label for="nombreEliminar">Codigo del articulo</label>
-                          <input type="number" id="articuloAEliminar" placeholder="7504516130567" class="form-control" required>
-                      </div>
-                      
-                    </form>
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal" id="cerrarModal">Cerrar</button>
-                  <button type="button" class="btn btn-danger" id="eliminarArticulo">Eliminar articulo</button>
-                </div>
-              </div>
             </div>
         </div>
 
 
         <!-- Modal para modificar articulo -->
-        <div class="modal fade" id="modalEditar" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <div class="modal-dialog" role="document">
-                  <div class="modal-content">
+        <div class="modal fade" id="modalEditar" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
                     <div class="modal-header">
-                      <h5 class="modal-title" id="exampleModalLabel">Editar articulo</h5>
-                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                      </button>
+                        <h5 class="modal-title" id="exampleModalLabel">Editar articulo</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
                     </div>
-                    <div class="modal-body" >
+                    <div class="modal-body">
                         <!-- Inicia formulario borrar articulo -->
-                        <form class="needs-validation" novalidate id="formTorneo">
-                          <div class="form-group">
-                              <label for="nombreEliminar">Codigo del articulo</label>
-                              <input type="number" id="articuloAEditarr" placeholder="7504516130567" class="form-control" required>
-                          </div>
-                          <p>Ingresa los nuevos datos del producto</p>
-                          <div class="form-group">
+                        <form class="needs-validation" novalidate id="formEditar">
+                            <div class="form-group">
+                                <label for="nombreEliminar">Codigo del articulo</label>
+                                <input type="number" id="articuloAEditarr" placeholder="7504516130567"
+                                    class="form-control" required>
+                            </div>
+                            <p>Ingresa los nuevos datos del producto</p>
+                            <div class="form-group">
                                 <label for="nombreArticulo">Nombre:</label>
-                                <input type="text" id="nombreAArticulo" placeholder="Lechita de la buena" class="form-control" required>
+                                <input type="text" id="nombreAArticulo" placeholder="Lechita de la buena"
+                                    class="form-control" required>
                             </div>
                             <div class="form-group">
-                              <label for="precioArticulo">Precio:</label>
-                              <input type="number" id="precioAArticulo" placeholder="$850.00" class="form-control" required>
+                                <label for="precioArticulo">Precio:</label>
+                                <input type="number" id="precioAArticulo" placeholder="$850.00" class="form-control"
+                                    required>
                             </div>
                             <div class="form-group">
                                 <label for="contenidoArticulo">Contenido:</label>
-                                <input type="number" id="contenidoAArticulo" placeholder="800ml" class="form-control" required>
+                                <input type="number" id="contenidoAArticulo" placeholder="800ml" class="form-control"
+                                    required>
                             </div>
                             <div class="form-group">
-                              <label for="descripcionArticulo">Descripcion:</label>
-                              <input type="text" id="descripcionAArticulo" placeholder="Leche entera lala pasteurisada" class="form-control" required>
-                          </div>
-                          
+                                <label for="descripcionArticulo">Descripcion:</label>
+                                <input type="text" id="descripcionAArticulo"
+                                    placeholder="Leche entera lala pasteurisada" class="form-control" required>
+                            </div>
+
                         </form>
                     </div>
                     <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-dismiss="modal" id="cerrarModalEditar">Cerrar</button>
-                      <button type="button" class="btn btn-warning" id="editarArticulo">Editar articulo</button>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal"
+                            id="cerrarEditar">Cerrar</button>
+                        <button type="button" class="btn btn-warning" id="editarArticulo">Editar articulo</button>
                     </div>
-                  </div>
                 </div>
             </div>
+        </div>
 
 
     </div>
