Sistema de Informacion con Listas Enlazadas(mejoras)

--- a/Tarea9/views/index.html
+++ b/Tarea9/views/index.html
@@ -221,11 +221,14 @@
                      <!-- Inicia formulario borrar articulo -->
                      <form class="needs-validation" novalidate id="formBuscar">
                          <div class="form-group">
-                             <label for="nombreABuscar">Codigo del articulo</label>
-                             <input type="number" id="articuloABuscar" placeholder="7504516130567"
-                                 class="form-control" required>
+                            <label for="nombreABuscar">Codigo del articulo</label>
+                            <input type="number" id="articuloABuscar" placeholder="7504516130567"
+                                 class="form-control" required>                             
                          </div>
                      </form>
+                     <div id="articuloBuscado">
+
+                     </div>
                  </div>
                  <div class="modal-footer">
                      <button type="button" class="btn btn-secondary" data-dismiss="modal"
